# ugsys-admin-panel

./: .coverage  .gitguardian.yaml  .gitignore  Dockerfile.lambda  devbox.json  justfile  main.py  pyproject.toml
.github/workflows/: ci-frontend.yml  ci.yml  codeql.yml  deploy-bff.yml  deploy-frontend.yml  deploy.yml  security-scan.yml
.kiro/hooks/: test-after-write.kiro.hook
.kiro/specs/admin-back-navigation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/admin-extended-profile-editor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/admin-panel/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/admin-projects-management/: design.md  requirements.md  tasks.md
.kiro/specs/admin-theme-switcher/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/admin-user-profile-editor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/topbar-user-profile-dropdown/: design.md  requirements.md  tasks.md
admin-shell/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
admin-shell/coverage/: coverage-final.json  index.html
admin-shell/coverage/config/: api.ts.html  index.html
admin-shell/coverage/stores/: authStore.ts.html  healthStore.ts.html  index.html  registryStore.ts.html
admin-shell/coverage/utils/: errorHandling.ts.html  index.html  logger.ts.html  secureLogging.ts.html
admin-shell/src/: App.test.ts  App.tsx  index.css  main.tsx
admin-shell/src/config/: api.test.ts  api.ts
admin-shell/src/domain/entities/: AdminUser.ts  (+4 more)
admin-shell/src/stores/: authStore.test.ts  authStore.ts  healthStore.test.ts  healthStore.ts  registryStore.test.ts  registryStore.ts
admin-shell/src/utils/: errorHandling.test.ts  errorHandling.ts  logger.test.ts  logger.ts  secureLogging.test.ts  secureLogging.ts
config/: seed_services.json
infrastructure/: eventbridge_rules.py
projects-plugin/: entry.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
projects-plugin/src/domain/: diffUtils.ts  validation.ts
projects-plugin/src/presentation/: App.tsx  index.css
scripts/: check_architecture.py
scripts/hooks/: pre-commit  pre-push
src/: lambda_handler.py  main.py
src/application/interfaces/: manifest_validator.py
src/application/services/: audit_service.py  auth_service.py  config_service.py  event_processing_service.py  health_aggregator_service.py  proxy_service.py  registry_service.py  self_profile_service.py  user_management_service.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  admin_user.py  audit_log_entry.py  health_status.py  plugin_manifest.py  service_registration.py
src/domain/repositories/: __init__.py  audit_log_repository.py  circuit_breaker.py  event_publisher.py  identity_client.py  profile_client.py  service_registry_repository.py  user_profile_service_client.py
src/domain/value_objects/: __init__.py  health_state.py  navigation_entry.py  role.py  route_descriptor.py  service_status.py
src/infrastructure/: logging.py
src/infrastructure/adapters/: identity_manager_client.py  in_memory_circuit_breaker.py  manifest_fetcher.py  user_profile_client.py  user_profile_service_adapter.py
src/infrastructure/messaging/: eventbridge_publisher.py  eventbridge_subscriber.py
src/infrastructure/persistence/: dynamodb_audit_log_repository.py  dynamodb_service_registry_repository.py
src/infrastructure/seed/: seed_loader.py
src/presentation/middleware/: __init__.py  audit_logging.py  body_size_limit.py  correlation_id.py  cors.py  csrf.py  jwt_validation.py  rate_limiting.py  security_headers.py
tests/: __init__.py
tests/application/: test_self_profile_service.py  test_user_management_service.py  test_user_management_service_ups.py  test_user_management_update_profile.py
tests/application/interfaces/: test_manifest_validator.py
tests/infrastructure/: test_circuit_breaker.py  test_dynamodb_service_registry_repository.py  test_identity_manager_client.py  test_seed_loader.py  test_user_profile_client.py  test_user_profile_service_adapter.py
tests/presentation/api/: test_auth_me_patch.py  test_health_endpoint.py  test_registry.py  test_ups_profile_endpoints.py  test_ups_profile_endpoints_property.py  test_users_profile_patch.py
tests/presentation/middleware/: test_csrf.py  test_jwt_validation.py  test_security_headers.py
(+86 files in other folders)
