[project]
name = "ugsys-admin-panel-bff"
version = "0.1.0"
description = "Admin Panel Backend-for-Frontend Proxy"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "PyJWT[crypto]>=2.12.0",
    "jsonschema>=4.23.0",
    "mangum>=0.19.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "moto[dynamodb]>=5.0.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "ANN", "RUF"]
ignore = [
    "S101",    # assert statements (used in tests)
    "B008",    # function call in default argument (standard FastAPI Depends pattern)
    "S105",    # hardcoded password / secret (false positives on cookie name constants)
    "S110",    # try-except-pass (intentional best-effort blocks)
    "ANN401",  # typing.Any disallowed (needed for dynamic/external types)
    "UP042",   # StrEnum migration (str+Enum pattern kept for compatibility)
    "SIM105",  # contextlib.suppress (try-except-pass is clearer in some contexts)
    "SIM102",  # nested if (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ANN"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
include = [
    "src/application/interfaces/*",
    "src/domain/entities/*",
    "src/domain/value_objects/*",
    "src/domain/exceptions.py",
]

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ulid"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mangum"
ignore_missing_imports = true
